syntax = "proto3";

package inference.v1;

option go_package = "github.com/anmho/inference/gen/protos/v1;inferencev1";

message CompletionsRequest {
  string prompt = 1;
  string role = 2;
}

message GetCompletionsResponse {
  string response = 1;
}


message StreamCompletionsResponse {
  string chunk = 1;
}

service InferenceService {
  rpc GetCompletions(CompletionsRequest) returns (GetCompletionsResponse) {}
  rpc StreamCompletions(CompletionsRequest) returns (stream StreamCompletionsResponse) {}
}